--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,5 +37,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   jaffle_shop:
-    +materialized: table
+    First_Project:
+      marts:
+        core:
+          +materialized: view
+      staging:
+        +materialized: view
     # Applies to all files under models/example/
