Modificação das tabelas de customers e orders. Buscando o source

--- a/models/First_Project/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/First_Project/staging/jaffle_shop/src_jaffle_shop.yml
@@ -1,6 +1,8 @@
+version: 2
+
 sources:
   - name: jaffle_shop
-    database: raw
+    database: dbt-fundamentals-412918
     schema: jaffle_shop
     tables:
       - name: customers
