--- a/models/First_Project/staging/stripe/src_stripe.yml
+++ b/models/First_Project/staging/stripe/src_stripe.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: stripe
-    database: dbt-fundamentals-412918
+    database: dbt-tutorial
     schema: stripe
     tables:
       - name: payments
